# spl-transformer

./: AST.cpp  AST.h  CMakeLists.txt  License.txt  README  README.md  Session.vim  Stack.h  ast_vertex.cpp  ast_vertex.h  cstack.h  cstack_wrapper.h  dummy.c  dummy.h  inject_local_threads.py  main.cpp  parser.ypp  rho.cpp  scanner.lpp  sigma.cpp  stacks2C.pl  symbol_table.cpp  symbol_table.h  tau.cpp  unparser.cpp  unparser.h  unparser_original.cpp
prg-analysis/constant-propagation/: constant-propagation.cpp  constant-propagation.h
prg-analysis/exclusive-read/: README  exclusive-read.cpp  exclusive-read.h
prg-analysis/interval-analysis/: interval-analysis.cpp  interval-analysis.h
test-suite/: adjoint-test-wt-p-threads.cpp  draw_memstats.py  drawbars.py  driver.cpp  extract-parallel-region.pl  finite_differences_kernel.c  finite_differences_test.cpp  gcc-makefile.inc  hostconfig.txt  install-papi.sh  intel-makefile.inc  job-template-builder.sh  omptest.cpp  set-env.sh  utilities.c
test-suite/a/: test.in
test-suite/atomic/: Makefile  test.in  test.old
test-suite/barrier/: a1_test.in.ref  index_test.cpp  t1_test.in.ref  test.in
test-suite/combined-parallel-loop/: a1_test.in.ref  t1_test.in.ref  test.in  test.in.md5  test.in.ref
test-suite/critical/: test.in  test.old  test_specific_decl.c
test-suite/critical_or_atomic/: Makefile  main.cpp  test.in
test-suite/exclusive-read-examples/: Session.vim  cfg-second-example.dot  data-decomposition-p-divides-n.in  data-decomposition.in  first-example.in  second-example.in  small.in
test-suite/exclusive_read/: noopt.bsub  opt-vs-noopt.bsub  test.in
test-suite/exclusive_read_closer_data_dep/: ERA-conditionals.txt  ERA-only-with-WIDENING.txt  ERA-with-NARROWING.txt  cfg-edited.dot  exclusive_read.bsub  job1.bsub  job2.bsub  job3.bsub  md5sums.txt  opt-vs-noopt.bsub  opt.bsub  t1_test.in.ref  test.in  test.in.ref  test.in.spl.prettyprinted.fix  todo.sh
test-suite/intrinsics/: a1_test.in.ref  t1_test.in.ref  test.in  test.in.ref
test-suite/master/: a1_test.in.ref  md5sums.txt  t1_test.in.ref  test.in  test.in.ref
test-suite/plain-parallel-hessian/: Makefile  create-gcc-fof-jobs.sh  create-gcc-for-jobs.sh  create-gcc-rof-jobs.sh  fof.cpp  for.cpp  rof.cpp  ror.cpp  test.in
(+1 files in other folders)
